# celeste-audio-intelligence

./: .gitignore  CLAUDE.md  README.md  example.py  pyproject.toml
src/celeste_audio_intelligence/: __init__.py  base.py  mapping.py
src/celeste_audio_intelligence/core/: enums.py  types.py
src/celeste_audio_intelligence/providers/: google.py  openai.py
